# bridge-deals-ingest

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED_CHECKLIST.md  INSTALLATION.md  LICENSE  MANIFEST.in  PACKAGE_STRUCTURE.md  PUBLISHING.md  QUICKSTART.md  README.md  Read.me  __init__.py  auction.py  common_objects.py  dds_wrapper.py  driver.py  fuzzy.py  ingest.py  json_parse.py  lin_parse.py  pbn_parse.py  process_records.py  pyproject.toml  pytest.ini  rbn_parse.py  requirements.txt  scoring.py  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-package.yml
extras/: DataModel.txt  boards.py  db_comp.py  deals.py  event.py  requirements.txt  vugraph.py
tests/: __init__.py  test_auction.py  test_common_objects.py
